--- a/portafolio.html
+++ b/portafolio.html
@@ -9,9 +9,12 @@
     <!-- <script src='portafolio.js'></script> -->
     <img src="img/fondo1.webp" alt="Fondo" class="background">
 
-</head>
-<body>
 
+</head>
+<img id="background" src="img/fondo1.webp" alt="Fondo" class="background">
+<body id="body">
+    <button id="toggle-theme">Modo Oscuro</button>
+    <button id="lang-btn"> Traducir</button>
 <header>  
     <div class="container">
         <a href="portafolio.html">
@@ -26,11 +29,11 @@
         <h1>Edgar Oviedo</h1>
     </div>
 </header>
-  <h2><a href="diseñografico.html">DISEÑO GRÁFICO</a></h2>
-    <h3> ilustración </h3>
-    <h4> uxui </h4>
-    <h5> html css javascript </h5>
+    <h2><a id="diseño"href="diseñografico.html">DISEÑO GRÁFICO</a></h2>
+    <h3 id="ilus"> ilustración </h3>
+    <h4 id="ux"> uxui </h4>
+    <h5 id="html"> html css javascript </h5>
 </body>
-<footer> Portafolio Edgar Oviedo 2025 Todos los derechos reservados </footer>
+<footer id="footer"> Portafolio Edgar Oviedo 2025 Todos los derechos reservados </footer>
 <script src='portafolio.js'></script>
 </html>
